--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Team Home
-    </title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Blog</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <!-- agar sass papkasini ichida style css yaratib bersa shuni ulang  -->
 </head>
-<!-- Ibrohim -->
+<!-- SHoqosim -->
 
 <body>
-
 
 
 
