--- a/pages/about.html
+++ b/pages/about.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../sass/style.css" />
     <!-- agar sass papkasini ichida style css yaratib bersa shuni ulang  -->
+  </head>
 
-</head>
+  <!-- SHamsiddin -->
 
-<!-- SHamsiddin -->
-
-<body>
-
-</body>
-
+  <body>
+    <h1 class="text">SHamsiddin</h1>
+  </body>
 </html>
